--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -77,3 +77,8 @@ textarea.content-field:focus {
   border-bottom: 1px solid blue;
 }
 
+.active.node-item > input{
+  border-top: 1px solid blue;
+  border-bottom: 1px solid blue;
+}
+
