--- a/app/assets/javascripts/templates/node_item.hbs
+++ b/app/assets/javascripts/templates/node_item.hbs
@@ -1,6 +1,6 @@
 {{#if view.content.hasKey}}
   {{view Ember.TextField valueBinding="view.content.nodeKey" class="key"}}:
 {{else}}
-  ::{{view.contentIndex}}
+  {{view Ember.TextField valueBinding="view.contentIndex" class="key"}}:
 {{/if}}
 {{view Sysys.HumonNodeView contentBinding="view.content"}}
