--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -1,6 +1,6 @@
 .node-literal {
   border: none; // 1px red solid;
-  display:inline-block;
+  // display:inline-block;
 }
 
 .node-collection {
@@ -27,6 +27,21 @@ textarea.content-field {
 textarea.content-field:focus {
   border: 1px white-smoke dashed;
   background: azure;
+  box-shadow: none;
+}
+
+.node input.key {
+  height: 20px;
+  width: 50px;
+  border: none;
+  padding: 0px;
+  margin: 0px;
+  border-radius: 0px;
+  border: 1px transparent solid;
+}
+
+.node input.key:focus {
+  border: 1px white-smoke dashed;
   box-shadow: none;
 }
 
