remove unfocus command from prev/nextNode; fix commit/commitAndContinue by selecting for .content-field.literal and adding .literal class to the literal content-fields

--- a/app/assets/javascripts/templates/humon_node.hbs
+++ b/app/assets/javascripts/templates/humon_node.hbs
@@ -5,7 +5,7 @@
 {{/if}}
 
 {{#if view.content.isLiteral}}
-  {{view Sysys.ContentField rawValueBinding="view.content.json"}}
+  {{view Sysys.ContentField rawValueBinding="view.content.json" class="literal"}}
 {{else}}
   {{#if view.content.isHash}}
     {{collection contentBinding="view.content.nodeVal" itemViewClass="Sysys.HumonNodeView" class="node-item-collection-wrapper hash"}}
