more styling changes (for node.active and its margins / border); switch to dc to use focusActiveNodeView which calls focusKeyfield and focusValField; add a placeholder contentfield for colletion items

--- a/app/assets/javascripts/templates/humon_node.hbs
+++ b/app/assets/javascripts/templates/humon_node.hbs
@@ -7,6 +7,7 @@
 {{#if view.content.isLiteral}}
   {{view Sysys.ContentField rawValueBinding="view.content.json" class="literal"}}
 {{else}}
+  {{view Sysys.ContentField class="placeholder"}}
   {{#if view.content.isHash}}
     {{collection contentBinding="view.content.nodeVal" itemViewClass="Sysys.HumonNodeView" class="node-item-collection-wrapper hash"}}
   {{/if}}
