hn.hbs: switch to view.content.nodeParent.isHash instead of view.content.hasKey; completely refactor ContentField, now is abstract class; have keyfield < contentfield and valfield < contentfield. refactor dC.commitChanges into commitKey and commitVal

--- a/app/assets/javascripts/templates/humon_node.hbs
+++ b/app/assets/javascripts/templates/humon_node.hbs
@@ -1,7 +1,7 @@
-{{#if view.content.hasKey}}
-  {{view Sysys.ContentField  rawValueBinding="view.content.nodeKey" class="key"}}:
+{{#if view.content.nodeParent.isHash}}
+  {{view Sysys.KeyField rawValueBinding="view.content.nodeKey" class="key"}}:
 {{else}}
-  {{view Sysys.ContentField  valueBinding="view.content.nodeIdx" class="key"}}:
+  {{view Sysys.ContentField valueBinding="view.content.nodeIdx" class="key"}}:
 {{/if}}
 
 {{#if view.content.isLiteral}}
