completely restructure humon_node to use blocky span; restyle; add ProxyField and IdxField to ContentField; update dC jquery selectors

--- a/app/assets/javascripts/templates/humon_node.hbs
+++ b/app/assets/javascripts/templates/humon_node.hbs
@@ -1,21 +1,27 @@
-{{#if view.content.nodeParent.isHash}}
-  {{view Sysys.KeyField rawValueBinding="view.content.nodeKey" class="key"}}:
-{{else}}
-  {{view Sysys.ContentField valueBinding="view.content.nodeIdx" class="key"}}:
+<span class="blocky">
+  {{#if view.content.nodeParent.isHash}}
+    {{view Sysys.KeyField rawValueBinding="view.content.nodeKey"}}
+  {{else}}
+   {{view Sysys.IdxField valueBinding="view.content.nodeIdx" rawValueBinding="view.content.nodeIdx"}} 
+  {{/if}}: 
+
+  {{#if view.content.isLiteral}}
+    {{view Sysys.ValField rawValueBinding="view.content.json" }}
+  {{else}}
+    {{view Sysys.ProxyField }}
+  {{/if}}
+</span>
+
+{{#if view.content.isHash}}
+  {{collection contentBinding="view.content.nodeVal" itemViewClass="Sysys.HumonNodeView" class="node-item-collection-wrapper hash"}}
+{{/if}}
+{{#if view.content.isList}}
+  {{collection contentBinding="view.content.nodeVal" itemViewClass="Sysys.HumonNodeView" class="node-item-collection-wrapper list"}}
 {{/if}}
 
-{{#if view.content.isLiteral}}
-  {{view Sysys.ContentField rawValueBinding="view.content.json" class="literal"}}
-{{else}}
-  {{view Sysys.ContentField class="placeholder"}}
-  {{#if view.content.isHash}}
-    {{collection contentBinding="view.content.nodeVal" itemViewClass="Sysys.HumonNodeView" class="node-item-collection-wrapper hash"}}
-  {{/if}}
-  {{#if view.content.isList}}
-    {{collection contentBinding="view.content.nodeVal" itemViewClass="Sysys.HumonNodeView" class="node-item-collection-wrapper list"}}
-  {{/if}}
-{{/if}}
 {{#if view.displayStats}}
   <strong> JSON STRING</strong>: {{view.json_string}} <br>
-  <strong> Active Humon Node</strong>: {{controller.activeHumonNode.nodeView.json_string}}
+  <strong> Active Humon Node</strong>: {{controller.activeHumonNode.nodeView.json_string}} <br>
+  <strong> Active Humon Node Key</strong> {{controller.activeHumonNode.nodeKey}} <br>
+  <strong> Active Humon Node Idx</strong> {{controller.activeHumonNode.nodeIdx}} <br>
 {{/if}}
