--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -1,3 +1,9 @@
+span.blocky {
+  display: inline-block;
+  width: 100%;
+  border: none;
+}
+
 .node {
   padding-left: 15px;
   margin-left: 8px;
@@ -5,40 +11,27 @@
   border-left: 4px white solid;
   background: white;
 }
-.node.active {
-  // background: rgba(0,255,255, 0.1);
-}
-
-.node.active > div > .node {
-  border-left: 4px rgba(0,0,255, 0.1) solid;
-}
+/*
+ * Active node styling
+ */
+.node.active { }
 
 .node.active > .blocky {
   background: rgba(0,0,255, 0.1);
 }
-
-span.blocky {
-  display: inline-block;
-  width: 100%;
-  border: none;
+.node.active > div > .node {
+  border-left: 4px rgba(0,0,255, 0.1) solid;
 }
 
-.proxy-field
+.node.node-literal { }
+.node.node-literal:hover { }
 
-.node.node-literal {
-}
-.node.node-literal:hover {
-  // border: 1px rgba(255,0,0,0.1) solid; // 1px red solid;
-  // border-left: 10px transparent solid;
-}
+.node.node-collection { }
+.node.node-collection:hover { }
 
-.node.node-collection {
-}
-.node.node-collection:hover {
-  // border: 1px rgba(255,0,0,0.1) solid; // 1px red solid;
-  // border-left: 10px transparent solid;
-}
-
+/*
+ * Content Fields
+ */
 textarea.content-field {
   height: 20px;
   border: none;
@@ -55,94 +48,18 @@ textarea.content-field:focus {
 }
 
 textarea.content-field.val-field {
-  height: 20px;
   width: 600px;
 }
-textarea.content-field.val-field:focus {
-}
-
+textarea.content-field.val-field:focus { }
 
 textarea.content-field.idx-field {
   width: 10px;
 }
-textarea.content-field.idx-field:focus {
-}
+textarea.content-field.idx-field:focus { }
 
 textarea.content-field.key-field {
   width: 50px;
 }
-textarea.content-field.key-field:focus {
-}
+textarea.content-field.key-field:focus { }
 
-/*
-.node input.key {
-  height: 20px;
-  width: 50px;
-  border: none;
-  padding: 0px;
-  margin: 0px;
-  border-radius: 0px;
-  border: 1px transparent solid;
-}
-
-.node input.key:focus {
-  border: 1px white-smoke dashed;
-  box-shadow: none;
-}
-
-.node-item input.key {
-  height: 20px;
-  width: 50px;
-  border: none;
-  padding: 0px;
-  margin: 0px;
-  border-radius: 0px;
-  border: 1px transparent solid;
-}
-
-.node-item input.key:focus {
-  border: 1px white-smoke dashed;
-  box-shadow: none;
-}
-*/
-/*
-.kvp-item input.key {
-  height: 20px;
-  width: 50px;
-  border: none;
-  padding: 0px;
-  margin: 0px;
-  border-radius: 0px;
-  border: 1px transparent solid;
-}
-
-.kvp-item input.key:focus {
-  border: 1px white-smoke dashed;
-  background: azure;
-  box-shadow: none;
-}
-*/
-
-// ACTIVS
-/*
-.active.node-literal {
-  border-top: 1px solid red;
-  border-bottom: 1px solid red;
-}
-
-.node-collection-flat.active   .node-literal {
-  border-top: 1px solid red;
-  border-bottom: 1px solid red;
-}
-
-.active.kvp-item > input{
-  border-top: 1px solid blue;
-  border-bottom: 1px solid blue;
-}
-
-.active.node-item > input{
-  border-top: 1px solid blue;
-  border-bottom: 1px solid blue;
-}
-*/
-
+textarea.content-field.proxy-field { }
