--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -8,8 +8,8 @@ span.blocky {
 
 .node {
   color: $copygray;
+  position: relative;
   padding-left: 15px;
-  margin-left: 8px;
   border: 1px transparent solid; 
   border-left: 4px white solid;
   background: white;
@@ -20,10 +20,10 @@ span.blocky {
 .node.active { }
 
 .node.active > .blocky {
-  background: rgba(0,0,255, 0.1);
+  background: rgba(0,0,255, 0.2);
 }
 .node.active > div > .node {
-  border-left: 4px rgba(0,0,255, 0.1) solid;
+  border-left: 4px rgba(0,0,255, 0.05) solid;
 }
 
 .node.node-literal { }
@@ -58,7 +58,8 @@ textarea.content-field.val-field:focus { }
 
 
 textarea.content-field.idx-field {
-  width: 10px;
+  width: 25px;
+  padding-left: 15px;
   font-style: bold;
   color: lighten($copygray, 25%);
 }
@@ -66,6 +67,7 @@ textarea.content-field.idx-field:focus { }
 
 textarea.content-field.key-field {
   width: 50px;
+  padding-left: 15px;
 }
 textarea.content-field.key-field:focus { }
 
