whitespace cleanups; phase out Em.assert on dC.commitVal for nonliterals; minor styling changes

--- a/app/assets/javascripts/templates/humon_node.hbs
+++ b/app/assets/javascripts/templates/humon_node.hbs
@@ -25,5 +25,6 @@
 <strong> Active Humon Node</strong>: {{controller.activeHumonNode.nodeView.json_string}} <br>
 <strong> Active Humon Node Key</strong> {{controller.activeHumonNode.nodeKey}} <br>
 <strong> Active Humon Node Idx</strong> {{controller.activeHumonNode.nodeIdx}} <br>
+<strong> Active Humon Node Parent</strong> {{controller.activeHumonNode.nodeParent.nodeView.json_string}} <br>
 {{/if}}
 
