--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -49,7 +49,7 @@ span.blocky {
 .node.active > div > .node {
   border-left: 4px $activeColorLight solid;
 }
-.node.active > span.blocky > textarea.content-field.key {
+.node.active > span.blocky > textarea.content-field.label-field {
   color: $activeColorDark;
   text-decoration: underline;
 }
@@ -57,7 +57,7 @@ span.blocky {
 /*
  * Active child styling
  */
-.node.activeChild > span.blocky > textarea.content-field.key {
+.node.activeChild > span.blocky > textarea.content-field.label-field {
   color: lighten($grayDark, 5%);
   text-decoration: underline;
 }
