adding / splitting jquery-autogrow into jquery-autogrow-plus, homegrown library temporarily disable autogrow for hnv fields

--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -148,3 +148,11 @@ span.close-glyph:after {
   margin-top: 0px;// transparent solid;
 }
 
+/*
+ * Autogrow Tests
+ */
+
+textarea.autogrow-field.content-field {
+  @include imp;
+  overflow: hidden;
+}
