upgrading to ember-1.0.0-rc.2 and handlebars-1.0.0-rc.3: add relevant vendor files; update dependencies.js.coffee; comment out router; simplifying Sysys init steps

--- a/app/assets/javascripts/templates/humon_node.hbs
+++ b/app/assets/javascripts/templates/humon_node.hbs
@@ -1,15 +1,14 @@
 <span class="blocky">
   {{#if view.content.nodeParent.isHash}}
-    {{view Sysys.KeyField rawValueBinding="view.content.nodeKey"}} :
+    {{view "Sysys.KeyField" rawValueBinding="view.content.nodeKey"}} :
   {{else}}
-    {{view Sysys.IdxField valueBinding="view.content.nodeIdx" rawValueBinding="view.content.nodeIdx"}}
+    {{view "Sysys.IdxField" valueBinding="view.content.nodeIdx" rawValueBinding="view.content.nodeIdx"}}
   {{/if}}
 
   {{#if view.content.isLiteral}}
-    {{view Sysys.ValField rawValueBinding="view.content.json" }}
+    {{view "Sysys.ValField" rawValueBinding="view.content.json" }}
   {{else}}
-
-    <span class="open-glyph"> </span>{{view Sysys.ProxyField }}
+    <span class="open-glyph"> </span>{{view "Sysys.ProxyField" }}
   {{/if}}
 </span>
 
