a lot of file cleanup; switch to jquery 1.9.1 (explicit in dependencies); refactor content-field have autogrow() and removeAutogrow() view methods; edit autogrowplus to include 'otherwidth' -- padding and margin; put change, keyup, keydown in namespace; fix bug with resizing occuring right when textarea loses focus because the element has been removed

--- a/app/assets/javascripts/templates/humon_node.hbs
+++ b/app/assets/javascripts/templates/humon_node.hbs
@@ -1,6 +1,6 @@
 <span class="blocky">
   {{#if view.content.nodeParent.isHash}}
-    {{view "Sysys.KeyField" rawValueBinding="view.content.nodeKey"}} :
+    {{view "Sysys.KeyField" rawValueBinding="view.content.nodeKey"}}
   {{else}}
     {{view "Sysys.IdxField" valueBinding="view.content.nodeIdx" rawValueBinding="view.content.nodeIdx"}}
   {{/if}}
@@ -26,4 +26,3 @@
 <strong> Active Humon Node Idx</strong> {{controller.activeHumonNode.nodeIdx}} <br>
 <strong> Active Humon Node Parent</strong> {{controller.activeHumonNode.nodeParent.nodeView.json_string}} <br>
 {{/if}}
-
