--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -85,18 +85,16 @@ textarea.content-field:focus {
 }
 
 textarea.content-field.label-field {
-  float: left;
-  width: auto;
 }
 textarea.content-field.val-field {
-  float: left;
-  width: auto;
+  min-width: 100px;
 }
 textarea.content-field.val-field:focus { }
 
 
 textarea.content-field.idx-field {
   width: 25px;
+  min-width: 25px;
   padding-left: 15px;
   color: $grayLight;
 }
@@ -105,6 +103,7 @@ textarea.content-field.idx-field:focus { }
 textarea.content-field.key-field {
   padding-left: 15px;
   width: 200px;
+  min-width: 50px;
 }
 textarea.content-field.key-field:focus { }
 
