--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -35,6 +35,7 @@ span.blocky {
 .node.node-literal { }
 .node.node-literal:hover { }
 .node.node-collection {
+  // see documentation on humonNodeView.suppressGap
   padding-bottom: 5px;
 }
 .node.node-collection:hover { }
@@ -151,7 +152,8 @@ span.close-glyph:after {
   content: ']';
 }
 
-.node.node-collection.addGap {
+// see hnv.suppressGap
+.node.node-collection.suppress-gap {
   padding-bottom: 0px;// transparent solid;
   margin-bottom: 0px;// transparent solid;
   margin-top: 0px;// transparent solid;
