--- a/app/assets/javascripts/templates/application.handlebars
+++ b/app/assets/javascripts/templates/application.handlebars
@@ -1,1 +1,10 @@
+<h1> SherwinPoints </h1>
+<div class="navbar">
+<div class="navbar-inner">
+<ul class="nav">
+  <li> {{#linkTo acts.new}} Track {{/linkTo}}</li>
+  <li> {{#linkTo acts}} Recent {{/linkTo}}</li>
+</ul>
+</div>
+</div>
 {{outlet}}
