HUGE changes. add mongoid_auto_increment to gemfile; update Act model to auto increment seq_id on create; Modify Acts#show to find both by seq_id and id modify Mongoid config (config/mongoid.yml): set raise_not_found_error to false add currentPath tracking to ApplicationController modify ds.store and DS.transforms to use j2hn and hn.get('json'); new transform called 'humon' switch from embedding DetailsView to HumonNodeView for act.hbs in acts.hbs, iterate over content with itemController=detail, and in each iteration instantiate ActView with content = act change acts route to call Act.find() convert DetailController from EmberObject to ObjectController; explicitly include activeHumonNodeView property (otherwise cannot have bindings)

--- a/app/assets/javascripts/templates/act.hbs
+++ b/app/assets/javascripts/templates/act.hbs
@@ -34,7 +34,8 @@
   <br>
 
   <span class="caption">details: </span>
-  {{view Sysys.DetailsView detailsBinding="detail"}}
+  {{view Sysys.HumonNodeView contentBinding="detail"}}
+  {{detail.json}}
   
 
 
