--- a/app/assets/javascripts/templates/acts.hbs
+++ b/app/assets/javascripts/templates/acts.hbs
@@ -2,8 +2,10 @@
 
 <div class="span8">
 <a class="btn" {{action newAct target="controller" href=true}}>New Act</a>
-    {{#each act in arrangedContent}}
-      {{view  Sysys.ActView}}
+  {{#each act in arrangedContent itemController=detail}}
+      {{! partial "act" }}
+      {{view Sysys.ActView contentBinding="act"}}
+      {{!render "act" act}}
     {{/each}}
 </div>
 {{outlet act}}
