remove [ Sysys.Act.createRecord() ] from one of the router methods; update ActsController#newAct to set up individual txn; add DetailController.js#commitAct and #setTransaction to set individual transactions; change act.hbs to use {{action commitAct}}

--- a/app/assets/javascripts/templates/act.hbs
+++ b/app/assets/javascripts/templates/act.hbs
@@ -35,14 +35,10 @@
 
   <span class="caption">details: </span>
   {{view Sysys.HumonNodeView contentBinding="detail"}}
-  {{detail.json}}
-  
-
 
   <button type="submit" class="btn btn-primary"> zorger </button>
+  <a {{action commitAct}} > wala </a>
 
-  {{! view Ember.TextField valueBinding="description"}}
-  {{! view Ember.TextField valueBinding="start_time"}}
   {{#if isDirty}}
   <div>
     You have unsaved changes
