--- a/app/assets/javascripts/templates/act.hbs
+++ b/app/assets/javascripts/templates/act.hbs
@@ -3,6 +3,12 @@
   <span class="caption">start time: </span> {{ dateFormat start_time format="MMM D h:mm a"}} ({{ dateFromNow start_time}}) ||  {{start_time}} <br>
   <span class="caption">start time:</span> {{view Sysys.DateTimePickerField  valBinding="start_time" }} ({{ dateFromNow start_time}})
   <span class="caption">duration: </span> {{view Sysys.DurationField valueBinding="duration"}}
+description:
+{{view Sysys.HumonNodeView contentBinding="description"}}
+start_time:
+{{view Sysys.HumonNodeView contentBinding="start_time"}}
+end_time:
+{{view Sysys.HumonNodeView contentBinding="end_time"}}
 
 <span class="caption">details: </span>
 {{view Sysys.HumonNodeView contentBinding="detail"}}
